--- a/style.css
+++ b/style.css
@@ -51,3 +51,19 @@ form input.equal {
 form input.operator {
   color: aqua;
 }
+@media screen and (max-width: 480px) {
+  .calculator form .res {
+    width: 50px; /* Adjusted button width for smaller screens */
+    height: 50px; /* Adjusted button height for smaller screens */
+    font-size: 16px; /* Adjusted font size for smaller screens */
+  }
+
+  form .display .res .equal {
+    font-size: 30px; /* Adjusted font size for smaller screens */
+  }
+  .calculator form .equal{
+    width: 125px;
+    height: 50px;
+  }
+
+}
